Implemented MAGETWO-849: "Ajax Pages" Visual Distinction from Page Types in Visual Design Editor Toolbar - added CSS class for Page Fragment Types in VDE hierarchy - updated tests

--- a/app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
+++ b/app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
@@ -243,3 +243,6 @@ body {
 #vde_page_types_tree .jstree-open > .jstree-icon {
     background: url(../images/jstree_plus_minus.png) top right no-repeat;
 }
+#vde_page_types_tree .vde_option_fragment a {
+    color: #eea243;
+}
