--- a/app/design/frontend/default/modern/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/default/modern/Mage_Catalog/product/view.phtml
@@ -65,7 +65,7 @@
 
             <?php echo $this->getChildHtml('other');?>
             <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-                <?php echo $this->getChildChildHtml('container1') ?>
+                <?php echo $this->getLayout()->renderElement('product.options.info.container') ?>
             <?php endif;?>
 
         </div>
@@ -76,7 +76,7 @@
 
         <div class="clearer"></div>
         <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-            <?php echo $this->getChildChildHtml('container2') ?>
+            <?php echo $this->getLayout()->renderElement('product.options.after.info.container') ?>
         <?php endif;?>
     </form>
     <script type="text/javascript">
