--- a/app/design/frontend/enterprise/default/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/enterprise/default/Mage_Catalog/product/view.phtml
@@ -13,6 +13,7 @@
  *
  * @see Mage_Catalog_Block_Product_View
  * @see Mage_Review_Block_Product_View
+ * @var $this Mage_Catalog_Block_Product_view
  */
 ?>
 <?php $_helper = $this->helper('Mage_Catalog_Helper_Output'); ?>
@@ -50,10 +51,8 @@
                             <?php echo $this->getChildHtml('addto') ?>
                         </div>
                     <?php else:?>
-                        <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getChildChildHtml('container1') ):?>
-                            <div class="options-container-small">
-                                <?php echo $this->getChildChildHtml('container1') ?>
-                            </div>
+                        <?php if ($_product->isSaleable() && $this->hasOptions()):?>
+                            <?php echo $this->getLayout()->renderElement('product.options.info.container') ?>
                         <?php else: ?>
                             <?php echo $this->getChildHtml('addto') ?>
                         <?php endif;?>
@@ -102,10 +101,8 @@
             <?php endif; ?>
         </div>
         <div class="clearer"></div>
-        <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getChildChildHtml('container2') ):?>
-            <div class="options-container-big">
-                <?php echo $this->getChildChildHtml('container2') ?>
-            </div>
+        <?php if ($_product->isSaleable() && $this->hasOptions()):?>
+            <?php echo $this->getLayout()->renderElement('product.options.after.info.container') ?>
         <?php endif;?>
     </form>
         <?php echo $this->getChildHtml('relatedProducts') ?>
