--- a/app/design/frontend/enterprise/iphone/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/enterprise/iphone/Mage_Catalog/product/view.phtml
@@ -51,10 +51,8 @@
                             <?php endif; ?>
                         </div>
                     <?php else:?>
-                        <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getChildChildHtml('container1') ):?>
-                            <div class="options-container-small">
-                                <?php echo $this->getChildChildHtml('container1') ?>
-                            </div>
+                        <?php if ($_product->isSaleable() && $this->hasOptions()):?>
+                            <?php echo $this->getLayout()->renderElement('product.options.info.container') ?>
                         <?php endif;?>
                     <?php endif; ?>
 
@@ -81,10 +79,8 @@
 
         <div class="product-review"><?php echo $this->getReviewsSummaryHtml($_product, false, true)?></div>
 
-        <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getChildChildHtml('container2') ):?>
-            <div class="options-container-big">
-                <?php echo $this->getChildChildHtml('container2') ?>
-            </div>
+        <?php if ($_product->isSaleable() && $this->hasOptions()):?>
+            <?php echo $this->getLayout()->renderElement('product.options.after.info.container') ?>
         <?php endif;?>
     </form>
     <?php echo $this->getChildHtml('upsell_products') ?>
