--- a/app/design/frontend/enterprise/iphone/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/enterprise/iphone/Mage_Catalog/product/view.phtml
@@ -52,7 +52,10 @@
                         </div>
                     <?php else:?>
                         <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-                            <?php echo $this->getLayout()->renderElement('product.options.info.container') ?>
+                            <?php $infoColumn = $this->getLayout()->renderElement('product.options.info.container'); ?>
+                            <?php if ($infoColumn): ?>
+                                <div class="options-container-small"><?php echo $infoColumn ?></div>
+                            <?php endif; ?>
                         <?php endif;?>
                     <?php endif; ?>
 
@@ -80,7 +83,10 @@
         <div class="product-review"><?php echo $this->getReviewsSummaryHtml($_product, false, true)?></div>
 
         <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-            <?php echo $this->getLayout()->renderElement('product.options.after.info.container') ?>
+            <?php $afterInfoColumn = $this->getLayout()->renderElement('product.options.after.info.container'); ?>
+            <?php if ($afterInfoColumn): ?>
+                <div class="options-container-big"><?php echo $afterInfoColumn ?></div>
+            <?php endif; ?>
         <?php endif;?>
     </form>
     <?php echo $this->getChildHtml('upsell_products') ?>
