Fixed MAGETWO-871: Backend Login Moving from Mage_Adminhtml to Backend Area - add integration test - add unit test - fix Enterprise modules (Logging, Pci) according auth controller changes - fix redirection after success login to specified page

--- a/app/design/install/default/pro/Mage_Install/end.phtml
+++ b/app/design/install/default/pro/Mage_Install/end.phtml
@@ -28,5 +28,5 @@
 <?php endif; ?>
 <div class="button-set">
     <button class="form-button" onclick="window.open('<?php echo $this->getUrl('') ?>')" type="button"><span><?php echo $this->__('Go to Frontend') ?></span></button>&nbsp;&nbsp;
-    <button class="form-button" onclick="window.open('<?php echo $this->getUrl('adminhtml') ?>')" type="button"><span><?php echo $this->__('Go to Backend') ?></span></button>
+    <button class="form-button" onclick="window.open('<?php echo Mage::helper('Mage_Backend_Helper_Data')->getHomePageUrl() ?>')" type="button"><span><?php echo $this->__('Go to Backend') ?></span></button>
 </div>
