Revert "Implemented MAGETWO-1121: Product View Simplified Layout"
This reverts commit cda62569f882aaf5674b6a0e815a6c7d68751219.

Conflicts:

	app/code/core/Mage/Catalog/view/frontend/layout.xml
	app/design/frontend/default/iphone/Mage_Catalog/layout.xml
	app/design/frontend/default/iphone/Mage_Catalog/product/view.phtml
	app/design/frontend/default/modern/Mage_Catalog/layout.xml
	app/design/frontend/enterprise/default/Mage_Catalog/layout.xml
	app/design/frontend/enterprise/default/Mage_Catalog/product/view.phtml
	app/design/frontend/enterprise/iphone/Mage_Catalog/layout.xml
	app/design/frontend/enterprise/iphone/Mage_Catalog/product/view.phtml
	app/design/frontend/pro/default/Mage_Catalog/layout.xml

--- a/app/design/frontend/default/modern/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/default/modern/Mage_Catalog/product/view.phtml
@@ -65,7 +65,7 @@
 
             <?php echo $this->getChildHtml('other');?>
             <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-                <?php echo $this->getLayout()->renderElement('product.options.info.container') ?>
+                <?php echo $this->getChildChildHtml('container1') ?>
             <?php endif;?>
 
         </div>
@@ -76,7 +76,7 @@
 
         <div class="clearer"></div>
         <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-            <?php echo $this->getLayout()->renderElement('product.options.after.info.container') ?>
+            <?php echo $this->getChildChildHtml('container2') ?>
         <?php endif;?>
     </form>
     <script type="text/javascript">
