--- a/app/code/core/Mage/Catalog/view/frontend/product/view.phtml
+++ b/app/code/core/Mage/Catalog/view/frontend/product/view.phtml
@@ -71,7 +71,7 @@
             <?php echo $this->getChildHtml('other');?>
 
             <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-                <?php echo $this->getLayout()->renderElement('product.options.info.container') ?>
+                <?php echo $this->getChildChildHtml('container1') ?>
             <?php endif;?>
 
         </div>
@@ -82,7 +82,7 @@
 
         <div class="clearer"></div>
         <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-            <?php echo $this->getLayout()->renderElement('product.options.after.info.container') ?>
+            <?php echo $this->getChildChildHtml('container2') ?>
         <?php endif;?>
     </form>
     <script type="text/javascript">
