--- a/app/design/frontend/enterprise/default/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/enterprise/default/Mage_Catalog/product/view.phtml
@@ -13,7 +13,6 @@
  *
  * @see Mage_Catalog_Block_Product_View
  * @see Mage_Review_Block_Product_View
- * @var $this Mage_Catalog_Block_Product_view
  */
 ?>
 <?php $_helper = $this->helper('Mage_Catalog_Helper_Output'); ?>
@@ -51,8 +50,10 @@
                             <?php echo $this->getChildHtml('addto') ?>
                         </div>
                     <?php else:?>
-                        <?php if ($_product->isSaleable() && $this->hasOptions() && $infoColumn = $this->getLayout()->renderElement('product.options.info.container')):?>
-                            <div class="options-container-small"><?php echo $infoColumn ?></div>
+                        <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getChildChildHtml('container1') ):?>
+                            <div class="options-container-small">
+                                <?php echo $this->getChildChildHtml('container1') ?>
+                            </div>
                         <?php else: ?>
                             <?php echo $this->getChildHtml('addto') ?>
                         <?php endif;?>
@@ -101,11 +102,10 @@
             <?php endif; ?>
         </div>
         <div class="clearer"></div>
-        <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-            <?php $afterInfoColumn = $this->getLayout()->renderElement('product.options.after.info.container'); ?>
-            <?php if ($afterInfoColumn): ?>
-                <div class="options-container-big"><?php echo $afterInfoColumn ?></div>
-            <?php endif; ?>
+        <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getChildChildHtml('container2') ):?>
+            <div class="options-container-big">
+                <?php echo $this->getChildChildHtml('container2') ?>
+            </div>
         <?php endif;?>
     </form>
         <?php echo $this->getChildHtml('relatedProducts') ?>
