--- a/app/design/frontend/enterprise/iphone/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/enterprise/iphone/Mage_Catalog/product/view.phtml
@@ -51,11 +51,10 @@
                             <?php endif; ?>
                         </div>
                     <?php else:?>
-                        <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-                            <?php $infoColumn = $this->getLayout()->renderElement('product.options.info.container'); ?>
-                            <?php if ($infoColumn): ?>
-                                <div class="options-container-small"><?php echo $infoColumn ?></div>
-                            <?php endif; ?>
+                        <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getChildChildHtml('container1') ):?>
+                            <div class="options-container-small">
+                                <?php echo $this->getChildChildHtml('container1') ?>
+                            </div>
                         <?php endif;?>
                     <?php endif; ?>
 
@@ -82,11 +81,10 @@
 
         <div class="product-review"><?php echo $this->getReviewsSummaryHtml($_product, false, true)?></div>
 
-        <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-            <?php $afterInfoColumn = $this->getLayout()->renderElement('product.options.after.info.container'); ?>
-            <?php if ($afterInfoColumn): ?>
-                <div class="options-container-big"><?php echo $afterInfoColumn ?></div>
-            <?php endif; ?>
+        <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getChildChildHtml('container2') ):?>
+            <div class="options-container-big">
+                <?php echo $this->getChildChildHtml('container2') ?>
+            </div>
         <?php endif;?>
     </form>
     <?php echo $this->getChildHtml('upsell_products') ?>
