--- a/app/design/frontend/default/modern/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/default/modern/Mage_Catalog/product/view.phtml
@@ -64,8 +64,8 @@
             <?php endif;?>
 
             <?php echo $this->getChildHtml('other');?>
-            <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-                <?php echo $this->getChildChildHtml('container1') ?>
+            <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getOptionsContainer() == 'container1'):?>
+                <?php echo $this->getChildChildHtml('container') ?>
             <?php endif;?>
 
         </div>
@@ -75,8 +75,8 @@
         </div>
 
         <div class="clearer"></div>
-        <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-            <?php echo $this->getChildChildHtml('container2') ?>
+        <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getOptionsContainer() == 'container2'):?>
+            <?php echo $this->getChildChildHtml('container') ?>
         <?php endif;?>
     </form>
     <script type="text/javascript">
