--- a/app/design/frontend/enterprise/default/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/enterprise/default/Mage_Catalog/product/view.phtml
@@ -50,9 +50,9 @@
                             <?php echo $this->getChildHtml('addto') ?>
                         </div>
                     <?php else:?>
-                        <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getChildChildHtml('container1') ):?>
+                        <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getOptionsContainer() == 'container1'):?>
                             <div class="options-container-small">
-                                <?php echo $this->getChildChildHtml('container1') ?>
+                                <?php echo $this->getChildChildHtml('container') ?>
                             </div>
                         <?php else: ?>
                             <?php echo $this->getChildHtml('addto') ?>
@@ -102,9 +102,9 @@
             <?php endif; ?>
         </div>
         <div class="clearer"></div>
-        <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getChildChildHtml('container2') ):?>
+        <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getOptionsContainer() == 'container2'):?>
             <div class="options-container-big">
-                <?php echo $this->getChildChildHtml('container2') ?>
+                <?php echo $this->getChildChildHtml('container') ?>
             </div>
         <?php endif;?>
     </form>
