--- a/app/design/frontend/default/iphone/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/default/iphone/Mage_Catalog/product/view.phtml
@@ -52,7 +52,7 @@
                         </div>
                         <?php echo $this->getChildHtml('extra_buttons') ?>
                     <?php else:?>
-                        <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getOptionsContainer() == 'container1'):?>
+                        <?php if ($_product->isSaleable() && $this->getOptionsContainer() == 'container1'):?>
                             <div class="options-container-small">
                                 <?php echo $this->getChildChildHtml('container') ?>
                             </div>
