--- a/app/design/frontend/enterprise/default/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/enterprise/default/Mage_Catalog/product/view.phtml
@@ -50,7 +50,7 @@
                             <?php echo $this->getChildHtml('addto') ?>
                         </div>
                     <?php else:?>
-                        <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getOptionsContainer() == 'container1'):?>
+                        <?php if ($_product->isSaleable() && $this->getOptionsContainer() == 'container1'):?>
                             <div class="options-container-small">
                                 <?php echo $this->getChildChildHtml('container') ?>
                             </div>
