--- a/app/code/core/Mage/User/view/adminhtml/admin/forgotpassword_url.phtml
+++ b/app/code/core/Mage/User/view/adminhtml/admin/forgotpassword_url.phtml
@@ -1,1 +1,11 @@
+<?php
+/**
+ * {license_notice}
+ *
+ * @category    design
+ * @package     default_default
+ * @copyright   {copyright}
+ * @license     {license_link}
+ */
+?>
 <a class="left" href="<?php echo Mage::helper('Mage_Backend_Helper_Data')->getUrl('adminhtml/auth/forgotpassword', array('_nosecret' => true))?>"><?php echo Mage::helper('Mage_User_Helper_Data')->__('Forgot your password?') ?></a>
