--- a/app/code/core/Enterprise/Checkout/view/frontend/cart/item/failed.phtml
+++ b/app/code/core/Enterprise/Checkout/view/frontend/cart/item/failed.phtml
@@ -19,7 +19,8 @@ $additionalInfoBlock = $this->getProductAdditionalInformationBlock();
 ?>
 <tr>
     <td>
-        <img src="<?php echo $this->getProductThumbnail()->resize(75); ?>" width="75" height="75" alt="<?php echo $this->escapeHtml($this->getProductName()) ?>" />
+        <img src="<?php echo $this->getProductThumbnailUrl() ?>" width="<?php echo $this->getThumbnailSize()?>" height="<?php echo $this->getThumbnailSize()?>"" alt="<?php echo $this->escapeHtml($this->getProductName()) ?>" />
+    </td>
     <td>
         <h3 class="product-name"><?php echo $this->escapeHtml($this->getProductName()) ?></h3>
         <?php if ($additionalInfoBlock):?>
