--- a/app/design/frontend/enterprise/default/Mage_Bundle/catalog/product/view.phtml
+++ b/app/design/frontend/enterprise/default/Mage_Bundle/catalog/product/view.phtml
@@ -111,7 +111,7 @@ $_product = $this->getProduct();
                 <a href="#" onclick="Enterprise.Bundle.end(); return false;"><small>&lsaquo;</small> Go back to product detail</a>
             </div>
             <?php echo $this->getChildHtml('bundleSummary') ?>
-            <?php echo $this->getChildChildHtml('container') ?>
+            <?php echo $this->getChildChildHtml('options_container') ?>
         </div>
         <?php endif;?>
         </form>
