--- a/app/design/frontend/enterprise/default/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/enterprise/default/Mage_Catalog/product/view.phtml
@@ -52,7 +52,7 @@
                     <?php else:?>
                         <?php if ($_product->isSaleable() && $this->getOptionsContainer() == 'container1'):?>
                             <div class="options-container-small">
-                                <?php echo $this->getChildChildHtml('container') ?>
+                                <?php echo $this->getChildChildHtml('options_container') ?>
                             </div>
                         <?php else: ?>
                             <?php echo $this->getChildHtml('addto') ?>
@@ -104,7 +104,7 @@
         <div class="clearer"></div>
         <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getOptionsContainer() == 'container2'):?>
             <div class="options-container-big">
-                <?php echo $this->getChildChildHtml('container') ?>
+                <?php echo $this->getChildChildHtml('options_container') ?>
             </div>
         <?php endif;?>
     </form>
