--- a/app/code/core/Mage/Catalog/view/frontend/product/view.phtml
+++ b/app/code/core/Mage/Catalog/view/frontend/product/view.phtml
@@ -71,7 +71,7 @@
             <?php echo $this->getChildHtml('other');?>
 
             <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getOptionsContainer() == 'container1'):?>
-                <?php echo $this->getChildChildHtml('container') ?>
+                <?php echo $this->getChildChildHtml('options_container') ?>
             <?php endif;?>
 
         </div>
@@ -82,7 +82,7 @@
 
         <div class="clearer"></div>
         <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getOptionsContainer() == 'container2'):?>
-            <?php echo $this->getChildChildHtml('container') ?>
+            <?php echo $this->getChildChildHtml('options_container') ?>
         <?php endif;?>
     </form>
     <script type="text/javascript">
