--- a/app/design/frontend/default/iphone/Mage_Catalog/product/view.phtml
+++ b/app/design/frontend/default/iphone/Mage_Catalog/product/view.phtml
@@ -54,7 +54,7 @@
                     <?php else:?>
                         <?php if ($_product->isSaleable() && $this->getOptionsContainer() == 'container1'):?>
                             <div class="options-container-small">
-                                <?php echo $this->getChildChildHtml('container') ?>
+                                <?php echo $this->getChildChildHtml('options_container') ?>
                             </div>
                         <?php endif;?>
                     <?php endif; ?>
@@ -87,7 +87,7 @@
 
         <?php if ($_product->isSaleable() && $this->hasOptions() && $this->getOptionsContainer() == 'container2'):?>
             <div class="options-container-big">
-                <?php echo $this->getChildChildHtml('container') ?>
+                <?php echo $this->getChildChildHtml('options_container') ?>
             </div>
         <?php endif;?>
     </form>
