--- a/app/code/core/Mage/User/view/adminhtml/admin/resetforgottenpassword.phtml
+++ b/app/code/core/Mage/User/view/adminhtml/admin/resetforgottenpassword.phtml
@@ -1,27 +1,11 @@
 <?php
 /**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magentocommerce.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magentocommerce.com for more information.
+ * {license_notice}
  *
  * @category    design
  * @package     default_default
- * @copyright   Copyright (c) 2011 Magento Inc. (http://www.magentocommerce.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ * @copyright   {copyright}
+ * @license     {license_link}
  */
 ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
@@ -34,7 +18,11 @@
         <link rel="icon" href="<?php echo $this->getSkinUrl('Mage_Page::favicon.ico'); ?>" type="image/x-icon" />
         <link rel="shortcut icon" href="<?php echo $this->getSkinUrl('Mage_Page::favicon.ico'); ?>" type="image/x-icon" />
 
-        <script type="text/javascript" src="<?php echo $this->getJsUrl() ?>index.php/x.js?f=prototype/prototype.js,prototype/validation.js,mage/adminhtml/events.js,mage/adminhtml/form.js,scriptaculous/effects.js"></script>
+        <script type="text/javascript" src="<?php echo $this->getSkinUrl('prototype/prototype.js'); ?>"></script>
+        <script type="text/javascript" src="<?php echo $this->getSkinUrl('prototype/validation.js'); ?>"></script>
+        <script type="text/javascript" src="<?php echo $this->getSkinUrl('mage/adminhtml/events.js'); ?>"></script>
+        <script type="text/javascript" src="<?php echo $this->getSkinUrl('mage/adminhtml/form.js'); ?>"></script>
+        <script type="text/javascript" src="<?php echo $this->getSkinUrl('scriptaculous/effects.js'); ?>"></script>
 
     <!--[if IE]> <link rel="stylesheet" href="<?php echo $this->getSkinUrl('iestyles.css'); ?>" type="text/css" media="all" /> <![endif]-->
     <!--[if lt IE 7]> <link rel="stylesheet" href="<?php echo $this->getSkinUrl('below_ie7.css'); ?>" type="text/css" media="all" /> <![endif]-->
