--- a/app/code/core/Mage/ImportExport/view/adminhtml/export/form/after.phtml
+++ b/app/code/core/Mage/ImportExport/view/adminhtml/export/form/after.phtml
@@ -26,5 +26,6 @@
 //<![CDATA[
    $('entity').selectedIndex = 0; // forced resetting entity selector after page refresh
    $('file_format_version').selectedIndex = 0; // forced resetting file format version selector after page refresh
+   $('customer_entity').selectedIndex = 0; // forced resetting customer entity selector after page refresh
 //]]>
 </script>
