--- a/app/code/core/Mage/ImportExport/view/adminhtml/export/form/before.phtml
+++ b/app/code/core/Mage/ImportExport/view/adminhtml/export/form/before.phtml
@@ -15,26 +15,67 @@
      *
      * @return void
      */
-    varienForm.prototype.getExportFormatVersionSelector = function()
+    varienForm.prototype.handleEntityTypeSelector = function()
     {
         if ($('entity') && $F('entity')) {
+            $('head-export_format_version_fieldset').hide();
+            $('export_format_version_fieldset').hide();
+            $('file_format_version').selectedIndex = 0;
+            $('head-customer_entity_fieldset').hide();
+            $('customer_entity_fieldset').hide();
+            $('customer_entity').selectedIndex = 0;
+
             switch ($F('entity')) {
                 case 'customer':
                     $('export_filter_grid_container').update('');
                     $('export_filter_container').hide();
-                    $('head-export_format_version').show();
-                    $('export_format_version').show();
+                    $('head-export_format_version_fieldset').show();
+                    $('export_format_version_fieldset').show();
                     break;
                 default:
-                    $('head-export_format_version').hide();
-                    $('export_format_version').hide();
                     this.getFilter();
                     break;
             }
         } else {
             $('export_filter_container').hide();
-            $('head-export_format_version').hide();
-            $('export_format_version').hide();
+            $('head-export_format_version_fieldset').hide();
+            $('export_format_version_fieldset').hide();
+            $('file_format_version').selectedIndex = 0;
+            $('head-customer_entity_fieldset').hide();
+            $('customer_entity_fieldset').hide();
+            $('customer_entity').selectedIndex = 0;
+        }
+    };
+
+    /**
+     * Post form data and process response via AJAX.
+     *
+     * @return void
+     */
+    varienForm.prototype.handleExportFormatVersionSelector = function()
+    {
+        if ($('file_format_version') && $F('file_format_version')) {
+            switch ($F('file_format_version')) {
+                case '<?php echo Mage_ImportExport_Model_Source_Export_Format_Version::EXPORT_VERSION_1 ?>':
+                    $('head-customer_entity_fieldset').hide();
+                    $('customer_entity_fieldset').hide();
+                    $('customer_entity').selectedIndex = 0;
+                    this.getFilter();
+                    break;
+                case '<?php echo Mage_ImportExport_Model_Source_Export_Format_Version::EXPORT_VERSION_2 ?>':
+                    $('export_filter_grid_container').update('');
+                    $('export_filter_container').hide();
+                    $('head-customer_entity_fieldset').show();
+                    $('customer_entity_fieldset').show();
+                    break;
+                default:
+                    break;
+            }
+        } else {
+            $('export_filter_container').hide();
+            $('head-customer_entity_fieldset').hide();
+            $('customer_entity_fieldset').hide();
+            $('customer_entity').selectedIndex = 0;
         }
     };
 
@@ -48,6 +89,33 @@
         if ($('entity') && $F('entity')) {
             var url = "<?php echo $this->getUrl('*/*/getFilter') ?>";
             url += ((url.slice(-1) != '/') ? '/' : '') + 'entity/' + $F('entity');
+
+            new Ajax.Request(url, {
+                method:      'post',
+                //parameters:  $(this.formId).serialize(),
+                evalScripts: true,
+                onComplete:  function(transport) {
+                    var responseText = transport.responseText.replace(/>\s+</g, '><');
+                    $('export_filter_grid_container').update(responseText);
+                    $('export_filter_container').show();
+                }
+            });
+        } else {
+            $('export_filter_container').hide();
+        }
+    };
+
+    /**
+     * Post form data and process response via AJAX.
+     *
+     * @return void
+     */
+    varienForm.prototype.getCustomerFilter = function()
+    {
+        if ($('entity') && $F('entity') && $('customer_entity') && $F('customer_entity')) {
+            var url = "<?php echo $this->getUrl('*/*/getFilter') ?>";
+            url += ((url.slice(-1) != '/') ? '/' : '') + 'entity/' + $F('entity');
+            url += '/' + 'customer_entity/' + $F('customer_entity');
 
             new Ajax.Request(url, {
                 method:      'post',
