Implemented MAGETWO-1429: Load attributes list for Customer Address to skip - Customer Address attributes grid implemented - covered with integration test

--- a/app/code/core/Mage/ImportExport/view/adminhtml/export/form/before.phtml
+++ b/app/code/core/Mage/ImportExport/view/adminhtml/export/form/before.phtml
@@ -142,8 +142,12 @@
         if ($('entity') && $('file_format')) {
             var form      = $('export_filter_form');
             var oldAction = form.action;
-            form.action   = oldAction + ((oldAction.slice(-1) != '/') ? '/' : '') + 'entity/' + $F('entity')
+            var url = oldAction + ((oldAction.slice(-1) != '/') ? '/' : '') + 'entity/' + $F('entity')
                 + '/file_format/' + $F('file_format');
+            if ($('customer_entity') && $F('customer_entity')) {
+                url += '/' + 'customer_entity/' + $F('customer_entity');
+            }
+            form.action = url;
             form.submit();
             form.action   = oldAction;
         } else {
