--- a/app/code/core/Mage/Backend/view/adminhtml/menu.phtml
+++ b/app/code/core/Mage/Backend/view/adminhtml/menu.phtml
@@ -10,13 +10,7 @@
 ?>
 
 <div class="nav-bar">
-<!-- menu start -->
-<?php
-    $menu = $this->getMenuModel();
-    echo $this->getMenuLevelHtml($menu[0]->getChildren()); ?>
-<!-- menu end -->
-
+<?php echo $this->renderMenuContainer($this->getMenuModel()); ?>
     <a id="page-help-link" href="<?php echo Mage::helper('Mage_Backend_Helper_Data')->getPageHelpUrl() ?>"><?php echo $this->__('Get help for this page') ?></a>
     <script type="text/javascript">$('page-help-link').target = 'magento_page_help'</script>
-
 </div>
