Fixed MAGETWO-882: Menu Rendering Adaptation and Moving - remove support of note item from menu configuration

--- a/app/code/core/Mage/Backend/view/adminhtml/menu/container.phtml
+++ b/app/code/core/Mage/Backend/view/adminhtml/menu/container.phtml
@@ -10,7 +10,7 @@
 ?>
 
 <ul <?php echo (!$this->getLevel() ? 'id="nav"' : '') ?>>
-    <?php foreach ($this->getMenuItems() as $menuItem) : ?>
+    <?php foreach ($this->getMenu() as $menuItem) : ?>
         <?php echo $this->renderMenuItem($menuItem); ?>
     <?php endforeach; ?>
 </ul>
