--- a/app/code/core/Mage/Backend/view/adminhtml/menu/item.phtml
+++ b/app/code/core/Mage/Backend/view/adminhtml/menu/item.phtml
@@ -9,13 +9,13 @@
  */
 ?>
 
-<li <?php echo ($this->getItem()->hasChildren() ? 'onmouseover="Element.addClassName(this,\'over\')" onmouseout="Element.removeClassName(this,\'over\')"' : ''); ?>
-    class="<?php echo ($this->isItemActive($this->getItem()) ? 'active' : '') . ' ' . ($this->getItem()->hasChildren() ? 'parent' : '') . ' ' . ($this->isLast() ? 'last' : '') . ' ' . ('level' . $this->getLevel()); ?>">
-    <a href="<?php echo $this->getItem()->getUrl(); ?>" <?php echo ($this->getItem()->hasTooltip() ? 'title="' . $this->getItem()->getModuleHelper()->__($this->getItem()->getTooltip()) . '"' : '') . ($this->getItem()->hasClickCallback() ? ' onclick="' . $this->getItem()->getClickCallback() . '"' : ''); ?> class="<?php echo ($this->isItemActive($this->getItem()) ? 'active' : ''); ?>">
-        <span><?php echo $this->escapeHtml($this->getItem()->getModuleHelper()->__($this->getItem()->getTitle())); ?> </span>
+<li <?php echo ($this->getMenuItem()->hasChildren() ? 'onmouseover="Element.addClassName(this,\'over\')" onmouseout="Element.removeClassName(this,\'over\')"' : ''); ?>
+    class="<?php echo ($this->isItemActive($this->getMenuItem()) ? 'active' : '') . ' ' . ($this->getMenuItem()->hasChildren() ? 'parent' : '') . ' ' . ($this->isLast() ? 'last' : '') . ' ' . ('level' . $this->getLevel()); ?>">
+    <a href="<?php echo $this->getMenuItem()->getUrl(); ?>" <?php echo ($this->getMenuItem()->hasTooltip() ? 'title="' . $this->getMenuItem()->getModuleHelper()->__($this->getMenuItem()->getTooltip()) . '"' : '') . ($this->getMenuItem()->hasClickCallback() ? ' onclick="' . $this->getMenuItem()->getClickCallback() . '"' : ''); ?> class="<?php echo ($this->isItemActive($this->getMenuItem()) ? 'active' : ''); ?>">
+        <span><?php echo $this->escapeHtml($this->getMenuItem()->getModuleHelper()->__($this->getMenuItem()->getTitle())); ?> </span>
     </a>
-    <?php if ($this->getItem()->hasChildren()) : ?>
-        <?php echo $this->getContainerRenderer()->renderMenuContainer($this->getItem()->getChildren(), $this->getLevel() + 1); ?>
+    <?php if ($this->getMenuItem()->hasChildren()) : ?>
+        <?php echo $this->getContainerRenderer()->renderMenuContainer($this->getMenuItem()->getChildren(), $this->getLevel() + 1); ?>
     <?php endif; ?>
 </li>
 
