Implemented MAGETWO-1429: Load customer attributes list for all customer entity types - fixed hiding skip column in filter form after pressing reset filter and search buttons - fixed code style issues

--- a/app/code/core/Mage/ImportExport/view/adminhtml/export/form/before.phtml
+++ b/app/code/core/Mage/ImportExport/view/adminhtml/export/form/before.phtml
@@ -30,7 +30,7 @@
 
             switch ($F('entity')) {
                 case 'customer':
-                    $('export_filter_grid_container').update('');
+                    $('export_filter_grid_container').update();
                     $('export_filter_container').hide();
                     $('head-export_format_version_fieldset').show();
                     $('export_format_version_fieldset').show();
@@ -124,7 +124,6 @@
 
             new Ajax.Request(url, {
                 method:      'post',
-                //parameters:  $(this.formId).serialize(),
                 evalScripts: true,
                 onComplete:  function(transport) {
                     var responseText = transport.responseText.replace(/>\s+</g, '><');
@@ -153,7 +152,6 @@
 
             new Ajax.Request(url, {
                 method:      'post',
-                //parameters:  $(this.formId).serialize(),
                 evalScripts: true,
                 onComplete:  function(transport) {
                     var responseText = transport.responseText.replace(/>\s+</g, '><');
