--- a/app/code/core/Enterprise/CustomerBalance/view/frontend/checkout/onepage/payment/additional.phtml
+++ b/app/code/core/Enterprise/CustomerBalance/view/frontend/checkout/onepage/payment/additional.phtml
@@ -40,7 +40,6 @@
     }
 
     Payment.prototype.switchCustomerBalanceCheckbox = function() {
-
         if (!customerBalanceSubstracted && $('use_customer_balance').checked) {
             quoteBaseGrandTotal -= <?php echo (float)$this->getBalance(); ?>;
             customerBalanceSubstracted = true;
@@ -56,20 +55,26 @@
         }
 
         if (quoteBaseGrandTotal < 0.0001) {
-            var elements = Form.getElements(this.form);
-            for (var i=0; i<elements.length; i++) {
+            var elements = Form.getElements(this.form), checkedFree = false;
+            for (var i = 0; i < elements.length; i++) {
                 if ($('use_customer_balance').checked) {
                     if (elements[i].name == 'payment[method]') {
-                        elements[i].disabled = true;
+                        if (elements[i].value == 'free') {
+                            checkedFree = true;
+                            elements[i].checked = true;
+                            elements[i].disabled = false;
+                            $(elements[i].parentNode).hide();
+                        }
                     }
-                }
-                if (elements[i].name == 'payment[method]' && elements[i].value == 'free') {
-                    elements[i].checked = false;
-                    elements[i].disabled = true;
-                    $(elements[i].parentNode).hide();
                 }
             }
             if ($('use_customer_balance').checked) {
+                if (!checkedFree) {
+                    $(this.form).insert(new Element(
+                        'input',
+                        {type: 'hidden', 'name': 'payment[method]', 'value': 'free'}
+                    ));
+                }
                 $('checkout-payment-method-load').hide();
                 payment.switchMethod();
             }
