--- a/app/code/core/Enterprise/CustomerBalance/view/frontend/checkout/onepage/payment/additional.phtml
+++ b/app/code/core/Enterprise/CustomerBalance/view/frontend/checkout/onepage/payment/additional.phtml
@@ -57,14 +57,14 @@
         if (quoteBaseGrandTotal < 0.0001) {
             var elements = Form.getElements(this.form), checkedFree = false;
             for (var i = 0; i < elements.length; i++) {
-                if ($('use_customer_balance').checked) {
-                    if (elements[i].name == 'payment[method]') {
-                        if (elements[i].value == 'free') {
-                            checkedFree = true;
-                            elements[i].checked = true;
-                            elements[i].disabled = false;
-                            $(elements[i].parentNode).hide();
-                        }
+                if (elements[i].name == 'payment[method]' && elements[i].value == 'free') {
+                    if ($('use_customer_balance').checked) {
+                        checkedFree = true;
+                        elements[i].checked = true;
+                        elements[i].disabled = false;
+                        $(elements[i].parentNode).hide();
+                    } else {
+                        elements[i].disabled = true;
                     }
                 }
             }
