--- a/app/design/frontend/pro/default/Enterprise_CustomerBalance/checkout/multishipping/payment.phtml
+++ b/app/design/frontend/pro/default/Enterprise_CustomerBalance/checkout/multishipping/payment.phtml
@@ -34,12 +34,12 @@
             }
             if (quoteBaseGrandTotal < 0.0001) {
                 var elements = Form.getElements('multishipping-billing-form');
-                for (var i=0; i<elements.length; i++) {
+                for (var i = 0; i < elements.length; i++) {
                     if ($('use_customer_balance').checked) {
                         if (elements[i].name == 'payment[method]') {
-                            elements[i].disabled = true;
-                            if (elements[i].value == 'free' && elements[i].type == 'radio'){
-                                elements[i].disabled = true;
+                            if (elements[i].value == 'free' && elements[i].type == 'radio') {
+                                elements[i].checked = true;
+                                elements[i].disabled = false;
                                 $(elements[i].parentNode).hide();
                             }
                         }
