Fixed MAGETWO-1570: Captcha is absent at Checkout Login page

--- a/app/design/frontend/enterprise/default/Mage_Checkout/onepage/login.phtml
+++ b/app/design/frontend/enterprise/default/Mage_Checkout/onepage/login.phtml
@@ -31,7 +31,7 @@
                         <input type="password" class="input-text validate-password required-entry" id="login-password" name="login[password]" />
                     </div>
                 </li>
-                <?php echo $this->getChildHtml('form.additional.info'); ?>
+                <?php echo $this->getChildHtml('login.form.additional.info'); ?>
                 <li class="note">
                     <a href="<?php echo $this->getUrl('customer/account/forgotpassword') ?>"><?php echo $this->__('Forgot your password?') ?></a>
                 </li>
