--- a/app/design/frontend/enterprise/default/Mage_Persistent/checkout/onepage/login.phtml
+++ b/app/design/frontend/enterprise/default/Mage_Persistent/checkout/onepage/login.phtml
@@ -37,7 +37,7 @@
                         <input type="password" class="input-text validate-password required-entry" id="login-password" name="login[password]" />
                     </div>
                 </li>
-                <?php echo $this->getChildHtml('form.additional.info'); ?>
+                <?php echo $this->getChildHtml('login.form.additional.info'); ?>
                 <li class="note">
                     <a href="<?php echo $this->helper('Mage_Customer_Helper_Data')->getForgotPasswordUrl()?>"><?php echo $this->__('Forgot Your Password?') ?></a>
                 </li>
