Implemented MAGETWO-1620: Entity type selector - fixed bug with incorrect behaviour select options

--- a/app/code/core/Mage/ImportExport/view/adminhtml/import/form/before.phtml
+++ b/app/code/core/Mage/ImportExport/view/adminhtml/import/form/before.phtml
@@ -126,7 +126,7 @@
      */
     varienForm.prototype.showAllBehaviours = function()
     {
-        if ($('behavior') && $F('behavior')) {
+        if ($('behavior')) {
             var behaviourLength = $('behavior').length;
             var behaviourOptions = $('behavior').options;
             for (var i = 0; i < behaviourLength; i++) {
